# Atlas

./: Atlas.sln  Atlas.vcxproj  Atlas.vcxproj.filters  CMakeLists.txt  README.md  build.bat  vk_layer_settings.txt
Source/: Main.cpp  PCH.h
Source/Common/: DynArray.h  GlyphPrimitives.h
Source/Graphics/: GlyphCache.cpp  GlyphCache.h  GlyphRasterizer.cpp  GlyphRasterizer.h  RenderTypes.h  Renderer.cpp  Renderer.h  ShaderBytecode.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderSource.h  VulkanAllocator.cpp  VulkanAllocator.h
dependencies/freetype/include/freetype/config/: ftmodule.h
dependencies/ttfparser/lib/: ttfparser.lib
misc/: glsl.targets  glsl.xml
src/: common_types.h  editor.c  editor.h  main.c  renderer.c  renderer.h  shared_types.h
src/core/: common_types.h  shared_types.h
src/editor/: editor.c  editor.h  editor_types.h  shared_editor_types.h
src/rendering/: glyph_rasterizer.c  glyph_rasterizer.h  glyph_tessellation.c  glyph_tessellation.h  renderer.c  renderer.h  rendering_types.h  shared_rendering_types.h  vulkan_common.h
src/shaders/: fragment.frag  vertex.vert  write_texture_atlas.comp
